<?xml version="1.0"?>
<package format="2">
  <name>my_ros2_logging_project</name>  <!-- 修改为 CMake 中的项目名称 -->
  <version>0.1.0</version>
  <description>Example of ROS2 logging with log rotation</description>
  <maintainer email="you@example.com">Your Name</maintainer>
  <license>Apache 2.0</license>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>rclcpp</depend>
  <depend>rcl_logging_log4cxx</depend>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
