<?xml version="1.0"?>
<package format="3">
  <name>ros2_log_rotation</name>
  <version>0.2.0</version>
  <description>ROS2 Log Rotation Package</description>
  <maintainer email=microseyuyu@outlook.jp>Sebastianhayashi</maintainer>
  <license>MIT</license>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>rclcpp</depend>
  <depend>spdlog_vendor</depend>
  <depend>yaml_cpp_vendor</depend>
  <exec_depend>launch</exec_depend>
  <test_depend>ament_cmake_gtest</test_depend>
</package>
